--- a/webserver/templates/userPage.html
+++ b/webserver/templates/userPage.html
@@ -4,29 +4,35 @@
 {% block content %}
 <h1>Welcome, {% for n in welcomeName %} {{n}} {% endfor %}</h1>
 <br>
-<br>
-<br>
-<h1>Some famous Computer Scientists</h1>
+
+<!--<h1>Some famous Computer Scientists</h1>
 <div>{{data}}</div>
 
  <div>
     {% for n in data %}
     <div>{{n}}</div>
     {% endfor %}
-  </div>
+  </div> -->
   
-  <h1>Tracking Accounts</h1>
-  <div>
-    {% for n in trackAcc %}
+<h1>Tracking Accounts</h1>
+<div>
+  {% for n in trackAcc %}
     <div>{{n}}</div>
-    {% endfor %}
-  </div>
+  {% endfor %} 
+</div>
+<br>
+<h1>Payment/Deposit Options</h1>
+<div>
+  {% for n in payOpt %}
+    <div>{{n}}</div>
+  {% endfor %}
+</div>
 
 <p><a href="/another">Go to the other page</a></p>
 
-<form method="POST" action="/add">
+<!--<form method="POST" action="/add">
 <p>Name of new computer scientist: <input type="text" name="name"> <input type="submit" value="Add"></p>
-</form>
-<div>{{test}}</div>
+</form> -->
+
 
 {% endblock %}
